added comprehensive, robust test classes. Fixed two end implementation problems and club following mechanism.